[package]

name = "bodyparser"
version = "0.3.0"
license = "MIT"
description = "Body parsing middleware for Iron."
repository = "https://github.com/iron/body-parser"
documentation = "http://ironframework.io/doc/bodyparser/index.html"
authors = ["Patrick Tran <patrick.tran06@gmail.com>",
           "Jonathan Reem <jonathan.reem@gmail.com>"]
keywords = ["iron", "web", "http", "parsing", "parser"]

[dependencies]
iron = "0.4"
plugin = "0.2"
persistent = "0.2"
serde = "0.7"
serde_json = "0.7"
